# visio-mcp

./: .gitignore  README.md  pyproject.toml
scripts/: smoke_test.py
src/visio_mcp/: __init__.py  constants.py  errors.py  models.py  runtime.py  server.py  visio_client.py
tests/: conftest.py  fake_visio.py  test_client.py  test_tools_schema.py  test_worker.py
